SRE-Challenge/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: top10movies-service
spec:
  type: NodePort
  selector:
    app: top10movies
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: top10games-service
spec:
  type: NodePort
  selector:
    app: top10games
  ports:

    - port: 8081
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: top10songs-service
spec:
  type: NodePort
  selector:
    app: top10songs
  ports:
    - port: 8082
      targetPort: 80
